fix: Dockerfile tz 설정 및 쿼리 수정